Image height on join page is now fixed and included easily adjustable forms for design presentation and join. Also made the /join page that is visible when can_join is false useful for when people still want to join throughout the year, by adding the three buttons.

--- a/app/styles/join.scss
+++ b/app/styles/join.scss
@@ -11,8 +11,9 @@
 	}
 
 	.card-img-top {
-		max-height: 228px;
+		height: 228px;
 		border-radius: 0;
 		object-fit: cover;
+		overflow-y: hidden;
 	}
 }
